--- a/binder/coursework/MANIFEST.in
+++ b/binder/coursework/MANIFEST.in
@@ -1,2 +1,3 @@
 include requirements.txt
-include coursework/data/*.csv
+include coursework/data/ETH80/*.csv
+include coursework/data/ETH80/original/*.npz
